Add distance to Preprocessing

--- a/Preprocess1.ipynb
+++ b/Preprocess1.ipynb
@@ -888,7 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ideally I'd have distance lefmost-rightmost as a lenght and a perpendicular distance measurement for width\n",
+    "# Ideally I'd have distance leftmost-rightmost as a lenght and a perpendicular distance measurement for width\n",
     "# so find perpendicular greatest distance, use only 1 axis"
    ]
   },
