Fix typo in Build basic crack/no crack classifier

--- a/Class1.ipynb
+++ b/Class1.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Create two subsets, training and validation, of the 'Cats' and 'Dogs' folders in the Training folder\n",
     "# state directory to create subsets from\n",
-    "dir = '/home/becode/AI/Data/Skyebase/OpenSource' # 2 folders 'positive' and 'negative'\n",
+    "dir = '/home/becode/AI/Data/Skyebase/OpenSource' # 2 folders 'negative' and 'positive'\n",
     "# create 'training' subset\n",
     "\n",
     "# image size concrete pics = 227x227\n",
